--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.15.9 Kernel Configuration
+# Linux/x86 6.16.0 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.1.1 20250729"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=150101
+CONFIG_GCC_VERSION=150201
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
 CONFIG_AS_VERSION=24500
@@ -59,7 +59,6 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_WATCH_QUEUE=y
 # CONFIG_CROSS_MEMORY_ATTACH is not set
-# CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
@@ -311,6 +310,7 @@ CONFIG_SYSTEM_DATA_VERIFICATION=y
 #
 # CONFIG_KEXEC is not set
 # CONFIG_KEXEC_FILE is not set
+# CONFIG_KEXEC_HANDOVER is not set
 # end of Kexec and crash features
 # end of General setup
 
@@ -349,7 +349,6 @@ CONFIG_X86_X2APIC=y
 CONFIG_X86_POSTED_MSI=y
 # CONFIG_X86_MPPARSE is not set
 CONFIG_X86_CPU_RESCTRL=y
-CONFIG_RESCTRL_FS_PSEUDO_LOCK=y
 CONFIG_X86_FRED=y
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_X86_INTEL_LPSS=y
@@ -359,6 +358,8 @@ CONFIG_IOSF_MBI=y
 CONFIG_X86_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
 # CONFIG_HYPERVISOR_GUEST is not set
+CONFIG_CC_HAS_MARCH_NATIVE=y
+# CONFIG_X86_NATIVE_CPU is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_TSC=y
@@ -418,7 +419,6 @@ CONFIG_MICROCODE=y
 # CONFIG_MICROCODE_LATE_LOADING is not set
 CONFIG_X86_MSR=y
 CONFIG_X86_CPUID=y
-CONFIG_X86_5LEVEL=y
 CONFIG_X86_DIRECT_GBPAGES=y
 CONFIG_X86_CPA_STATISTICS=y
 # CONFIG_AMD_MEM_ENCRYPT is not set
@@ -462,6 +462,7 @@ CONFIG_ARCH_SUPPORTS_KEXEC_SIG=y
 CONFIG_ARCH_SUPPORTS_KEXEC_SIG_FORCE=y
 CONFIG_ARCH_SUPPORTS_KEXEC_BZIMAGE_VERIFY_SIG=y
 CONFIG_ARCH_SUPPORTS_KEXEC_JUMP=y
+CONFIG_ARCH_SUPPORTS_KEXEC_HANDOVER=y
 CONFIG_ARCH_SUPPORTS_CRASH_DUMP=y
 CONFIG_ARCH_DEFAULT_CRASH_DUMP=y
 CONFIG_ARCH_SUPPORTS_CRASH_HOTPLUG=y
@@ -470,7 +471,6 @@ CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_X86_NEED_RELOCS=y
 CONFIG_PHYSICAL_ALIGN=0x200000
-CONFIG_DYNAMIC_MEMORY_LAYOUT=y
 CONFIG_RANDOMIZE_MEMORY=y
 CONFIG_RANDOMIZE_MEMORY_PHYSICAL_PADDING=0x0
 CONFIG_HOTPLUG_CPU=y
@@ -597,6 +597,7 @@ CONFIG_ACPI_DPTF=y
 # CONFIG_ACPI_PFRUT is not set
 CONFIG_ACPI_PCC=y
 CONFIG_ACPI_FFH=y
+CONFIG_ACPI_MRRM=y
 CONFIG_PMIC_OPREGION=y
 CONFIG_ACPI_PRMT=y
 CONFIG_X86_PM_TIMER=y
@@ -735,9 +736,6 @@ CONFIG_X86_DISABLED_FEATURE_USER_SHSTK=y
 CONFIG_X86_DISABLED_FEATURE_IBT=y
 CONFIG_X86_DISABLED_FEATURE_SEV_SNP=y
 CONFIG_AS_AVX512=y
-CONFIG_AS_SHA1_NI=y
-CONFIG_AS_SHA256_NI=y
-CONFIG_AS_TPAUSE=y
 CONFIG_AS_GFNI=y
 CONFIG_AS_VAES=y
 CONFIG_AS_VPCLMULQDQ=y
@@ -799,6 +797,7 @@ CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_MMU_GATHER_TABLE_FREE=y
 CONFIG_MMU_GATHER_RCU_TABLE_FREE=y
 CONFIG_MMU_GATHER_MERGE_VMAS=y
+CONFIG_ARCH_WANT_IRQS_OFF_ACTIVATE_MM=y
 CONFIG_MMU_LAZY_TLB_REFCOUNT=y
 CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
 CONFIG_ARCH_HAVE_EXTRA_ELF_NOTES=y
@@ -875,6 +874,7 @@ CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_STRICT_MODULE_RWX=y
+CONFIG_ARCH_HAS_CPU_RESCTRL=y
 CONFIG_HAVE_ARCH_PREL32_RELOCATIONS=y
 CONFIG_ARCH_USE_MEMREMAP_PROT=y
 CONFIG_LOCK_EVENT_COUNTS=y
@@ -994,7 +994,6 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_CMDLINE_PARTITION is not set
 # end of Partition Types
 
-CONFIG_BLK_MQ_PCI=y
 CONFIG_BLK_PM=y
 CONFIG_BLOCK_HOLDER_DEPRECATED=y
 CONFIG_BLK_MQ_STACKING=y
@@ -1124,6 +1123,7 @@ CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=7
+CONFIG_PAGE_BLOCK_ORDER=10
 CONFIG_MEM_SOFT_DIRTY=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_DEFERRED_STRUCT_PAGE_INIT is not set
@@ -1175,6 +1175,7 @@ CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
 CONFIG_SKB_EXTENSIONS=y
 CONFIG_NET_DEVMEM=y
+CONFIG_NET_CRC32C=y
 
 #
 # Networking options
@@ -1401,7 +1402,6 @@ CONFIG_NF_TABLES_IPV6=y
 # CONFIG_IP6_NF_IPTABLES is not set
 # end of IPv6: Netfilter Configuration
 
-# CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
 # CONFIG_TIPC is not set
@@ -1654,7 +1654,7 @@ CONFIG_VGA_ARB_MAX_GPUS=10
 # CONFIG_PCI_SW_SWITCHTEC is not set
 # end of PCI switch controller drivers
 
-# CONFIG_PCI_PWRCTL_SLOT is not set
+# CONFIG_PCI_PWRCTRL_SLOT is not set
 # CONFIG_CXL_BUS is not set
 # CONFIG_PCCARD is not set
 # CONFIG_RAPIDIO is not set
@@ -1810,6 +1810,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_ATA_OVER_ETH is not set
 # CONFIG_BLK_DEV_RBD is not set
 # CONFIG_BLK_DEV_UBLK is not set
+# CONFIG_BLK_DEV_ZONED_LOOP is not set
 
 #
 # NVME Support
@@ -1827,6 +1828,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_IBM_ASM is not set
 # CONFIG_PHANTOM is not set
+# CONFIG_TI_FPC202 is not set
 # CONFIG_TIFM_CORE is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
@@ -1865,7 +1867,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_INTEL_MEI is not set
 # CONFIG_VMWARE_VMCI is not set
 # CONFIG_GENWQE is not set
-# CONFIG_ECHO is not set
 # CONFIG_BCM_VK is not set
 # CONFIG_MISC_ALCOR_PCI is not set
 # CONFIG_MISC_RTSX_PCI is not set
@@ -1873,6 +1874,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_UACCE is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_KEBA_CP500 is not set
+# CONFIG_AMD_SBRMI_I2C is not set
 # end of Misc devices
 
 #
@@ -2057,6 +2059,7 @@ CONFIG_NET_CORE=y
 # CONFIG_BONDING is not set
 # CONFIG_DUMMY is not set
 # CONFIG_WIREGUARD is not set
+# CONFIG_OVPN is not set
 # CONFIG_EQUALIZER is not set
 # CONFIG_NET_FC is not set
 # CONFIG_NET_TEAM is not set
@@ -2174,7 +2177,7 @@ CONFIG_E1000E_HWTS=y
 # CONFIG_PHYLIB is not set
 # CONFIG_MICREL_KS8995MA is not set
 # CONFIG_PSE_CONTROLLER is not set
-# CONFIG_MDIO_DEVICE is not set
+# CONFIG_MDIO_BUS is not set
 
 #
 # PCS device drivers
@@ -2600,6 +2603,7 @@ CONFIG_PINCTRL=y
 # CONFIG_W1 is not set
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_RESTART=y
+# CONFIG_POWER_RESET_TORADEX_EC is not set
 # CONFIG_POWER_SEQUENCING is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -2607,6 +2611,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_IP5XXX_POWER is not set
 # CONFIG_TEST_POWER is not set
 # CONFIG_CHARGER_ADP5061 is not set
+# CONFIG_BATTERY_CHAGALL is not set
 # CONFIG_BATTERY_CW2015 is not set
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
@@ -2622,6 +2627,7 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_CHARGER_MANAGER is not set
 # CONFIG_CHARGER_LTC4162L is not set
 # CONFIG_CHARGER_MAX77976 is not set
+# CONFIG_CHARGER_MAX8971 is not set
 # CONFIG_CHARGER_BQ2415X is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
@@ -2758,13 +2764,11 @@ CONFIG_SENSORS_CORETEMP=m
 # CONFIG_SENSORS_NZXT_KRAKEN3 is not set
 # CONFIG_SENSORS_NZXT_SMART2 is not set
 # CONFIG_SENSORS_OCC_P8_I2C is not set
-# CONFIG_SENSORS_OXP is not set
 # CONFIG_SENSORS_PCF8591 is not set
 # CONFIG_PMBUS is not set
 # CONFIG_SENSORS_PT5161L is not set
 # CONFIG_SENSORS_PWM_FAN is not set
 # CONFIG_SENSORS_SBTSI is not set
-# CONFIG_SENSORS_SBRMI is not set
 # CONFIG_SENSORS_SHT21 is not set
 # CONFIG_SENSORS_SHT3x is not set
 # CONFIG_SENSORS_SHT4x is not set
@@ -2908,6 +2912,7 @@ CONFIG_WATCHDOG_PRETIMEOUT_DEFAULT_GOV_PANIC=y
 # CONFIG_WAFER_WDT is not set
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_IE6XX_WDT is not set
+# CONFIG_INTEL_OC_WATCHDOG is not set
 # CONFIG_ITCO_WDT is not set
 # CONFIG_IT8712F_WDT is not set
 # CONFIG_IT87_WDT is not set
@@ -3051,6 +3056,7 @@ CONFIG_REGULATOR_NETLINK_EVENTS=y
 # CONFIG_REGULATOR_88PG86X is not set
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
+# CONFIG_REGULATOR_ADP5055 is not set
 # CONFIG_REGULATOR_DA9210 is not set
 # CONFIG_REGULATOR_DA9211 is not set
 # CONFIG_REGULATOR_FAN53555 is not set
@@ -3121,7 +3127,13 @@ CONFIG_VIDEO=y
 # CONFIG_AGP is not set
 # CONFIG_VGA_SWITCHEROO is not set
 CONFIG_DRM=y
+
+#
+# DRM debugging options
+#
 # CONFIG_DRM_DEBUG_MM is not set
+# end of DRM debugging options
+
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_DRAW=y
 CONFIG_DRM_PANIC=y
@@ -3159,6 +3171,13 @@ CONFIG_DRM_TTM_HELPER=m
 CONFIG_DRM_GEM_SHMEM_HELPER=y
 CONFIG_DRM_SUBALLOC_HELPER=m
 CONFIG_DRM_SCHED=m
+
+#
+# Drivers for system framebuffers
+#
+CONFIG_DRM_SYSFB_HELPER=y
+CONFIG_DRM_SIMPLEDRM=y
+# end of Drivers for system framebuffers
 
 #
 # ARM devices
@@ -3225,7 +3244,6 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_CIRRUS_QEMU is not set
 # CONFIG_DRM_GM12U320 is not set
 # CONFIG_DRM_PANEL_MIPI_DBI is not set
-CONFIG_DRM_SIMPLEDRM=y
 # CONFIG_TINYDRM_HX8357D is not set
 # CONFIG_TINYDRM_ILI9163 is not set
 # CONFIG_TINYDRM_ILI9225 is not set
@@ -3234,10 +3252,11 @@ CONFIG_DRM_SIMPLEDRM=y
 # CONFIG_TINYDRM_MI0283QT is not set
 # CONFIG_TINYDRM_REPAPER is not set
 # CONFIG_TINYDRM_SHARP_MEMORY is not set
-# CONFIG_TINYDRM_ST7586 is not set
-# CONFIG_TINYDRM_ST7735R is not set
 # CONFIG_DRM_VBOXVIDEO is not set
 # CONFIG_DRM_GUD is not set
+# CONFIG_DRM_ST7571_I2C is not set
+# CONFIG_DRM_ST7586 is not set
+# CONFIG_DRM_ST7735R is not set
 # CONFIG_DRM_SSD130X is not set
 CONFIG_DRM_PANEL_BACKLIGHT_QUIRKS=m
 CONFIG_DRM_PRIVACY_SCREEN=y
@@ -3462,6 +3481,7 @@ CONFIG_SND_PCI=y
 CONFIG_SND_HDA=m
 CONFIG_SND_HDA_GENERIC_LEDS=y
 CONFIG_SND_HDA_INTEL=m
+# CONFIG_SND_HDA_ACPI is not set
 CONFIG_SND_HDA_HWDEP=y
 CONFIG_SND_HDA_RECONFIG=y
 CONFIG_SND_HDA_INPUT_BEEP=y
@@ -3681,6 +3701,7 @@ CONFIG_USB_XHCI_DBGCAP=y
 CONFIG_USB_XHCI_PCI=y
 # CONFIG_USB_XHCI_PCI_RENESAS is not set
 # CONFIG_USB_XHCI_PLATFORM is not set
+# CONFIG_USB_XHCI_SIDEBAND is not set
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
@@ -4077,6 +4098,7 @@ CONFIG_ACPI_WMI=m
 # CONFIG_AMD_PMC is not set
 # CONFIG_AMD_3D_VCACHE is not set
 # CONFIG_AMD_WBRF is not set
+# CONFIG_AMD_ISP_PLATFORM is not set
 # CONFIG_ADV_SWBUTTON is not set
 # CONFIG_APPLE_GMUX is not set
 # CONFIG_ASUS_LAPTOP is not set
@@ -4130,11 +4152,13 @@ CONFIG_ACPI_WMI=m
 # CONFIG_SERIAL_MULTI_INSTANTIATE is not set
 # CONFIG_INSPUR_PLATFORM_PROFILE is not set
 # CONFIG_LENOVO_WMI_CAMERA is not set
+# CONFIG_DASHARO_ACPI is not set
 # CONFIG_INTEL_IPS is not set
 # CONFIG_INTEL_SCU_PCI is not set
 # CONFIG_INTEL_SCU_PLATFORM is not set
 # CONFIG_SIEMENS_SIMATIC_IPC is not set
 # CONFIG_WINMATE_FM07_KEYS is not set
+# CONFIG_TUXEDO_NB04_WMI_AB is not set
 CONFIG_P2SB=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -4505,6 +4529,8 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_HPFS_FS is not set
 # CONFIG_QNX4FS_FS is not set
 # CONFIG_QNX6FS_FS is not set
+CONFIG_RESCTRL_FS=y
+CONFIG_RESCTRL_FS_PSEUDO_LOCK=y
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
 CONFIG_PSTORE_DEFAULT_KMSG_BYTES=10240
@@ -4708,15 +4734,12 @@ CONFIG_CRYPTO_HKDF=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
-CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_NULL=y
-CONFIG_CRYPTO_NULL2=y
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_CRYPTD=m
 CONFIG_CRYPTO_AUTHENC=m
 # CONFIG_CRYPTO_KRB5ENC is not set
-# CONFIG_CRYPTO_TEST is not set
-CONFIG_CRYPTO_SIMD=m
+# CONFIG_CRYPTO_BENCHMARK is not set
 # end of Crypto core or helper
 
 #
@@ -4787,7 +4810,6 @@ CONFIG_CRYPTO_HMAC=y
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 CONFIG_CRYPTO_POLYVAL=m
-# CONFIG_CRYPTO_POLY1305 is not set
 # CONFIG_CRYPTO_RMD160 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
@@ -4874,10 +4896,8 @@ CONFIG_CRYPTO_AES_NI_INTEL=m
 # CONFIG_CRYPTO_AEGIS128_AESNI_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_AVX2 is not set
-CONFIG_CRYPTO_BLAKE2S_X86=y
 CONFIG_CRYPTO_POLYVAL_CLMUL_NI=m
 CONFIG_CRYPTO_SHA1_SSSE3=m
-CONFIG_CRYPTO_SHA256_SSSE3=m
 CONFIG_CRYPTO_SHA512_SSSE3=m
 # CONFIG_CRYPTO_SM3_AVX_X86_64 is not set
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
@@ -4946,6 +4966,11 @@ CONFIG_CRYPTO_LIB_CURVE25519_INTERNAL=y
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=11
 CONFIG_CRYPTO_LIB_SHA1=y
 CONFIG_CRYPTO_LIB_SHA256=y
+CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256=y
+CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256_SIMD=y
+CONFIG_CRYPTO_LIB_SHA256_GENERIC=y
+CONFIG_CRYPTO_BLAKE2S_X86=y
+CONFIG_CRYPTO_SHA256_X86_64=y
 # end of Crypto library routines
 
 CONFIG_CRC_CCITT=y
@@ -5257,7 +5282,6 @@ CONFIG_UNWINDER_ORC=y
 #
 # CONFIG_KUNIT is not set
 CONFIG_ARCH_HAS_KCOV=y
-CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_ARCH_USE_MEMTEST=y
