--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.16.3 Kernel Configuration
+# Linux/x86 6.16.4 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
@@ -492,35 +492,31 @@ CONFIG_CC_HAS_RETURN_THUNK=y
 CONFIG_CC_HAS_ENTRY_PADDING=y
 CONFIG_FUNCTION_PADDING_CFI=11
 CONFIG_FUNCTION_PADDING_BYTES=16
-CONFIG_CALL_PADDING=y
 CONFIG_HAVE_CALL_THUNKS=y
-CONFIG_CALL_THUNKS=y
-CONFIG_PREFIX_SYMBOLS=y
 CONFIG_CPU_MITIGATIONS=y
 CONFIG_MITIGATION_PAGE_TABLE_ISOLATION=y
 CONFIG_MITIGATION_RETPOLINE=y
 CONFIG_MITIGATION_RETHUNK=y
-CONFIG_MITIGATION_UNRET_ENTRY=y
-CONFIG_MITIGATION_CALL_DEPTH_TRACKING=y
-# CONFIG_CALL_THUNKS_DEBUG is not set
-CONFIG_MITIGATION_IBPB_ENTRY=y
-CONFIG_MITIGATION_IBRS_ENTRY=y
-CONFIG_MITIGATION_SRSO=y
-CONFIG_MITIGATION_SLS=y
-CONFIG_MITIGATION_GDS=y
-CONFIG_MITIGATION_RFDS=y
-CONFIG_MITIGATION_SPECTRE_BHI=y
-CONFIG_MITIGATION_MDS=y
-CONFIG_MITIGATION_TAA=y
-CONFIG_MITIGATION_MMIO_STALE_DATA=y
-CONFIG_MITIGATION_L1TF=y
-CONFIG_MITIGATION_RETBLEED=y
+# CONFIG_MITIGATION_UNRET_ENTRY is not set
+# CONFIG_MITIGATION_CALL_DEPTH_TRACKING is not set
+# CONFIG_MITIGATION_IBPB_ENTRY is not set
+# CONFIG_MITIGATION_IBRS_ENTRY is not set
+# CONFIG_MITIGATION_SRSO is not set
+# CONFIG_MITIGATION_SLS is not set
+# CONFIG_MITIGATION_GDS is not set
+# CONFIG_MITIGATION_RFDS is not set
+# CONFIG_MITIGATION_SPECTRE_BHI is not set
+# CONFIG_MITIGATION_MDS is not set
+# CONFIG_MITIGATION_TAA is not set
+# CONFIG_MITIGATION_MMIO_STALE_DATA is not set
+# CONFIG_MITIGATION_L1TF is not set
+# CONFIG_MITIGATION_RETBLEED is not set
 CONFIG_MITIGATION_SPECTRE_V1=y
 CONFIG_MITIGATION_SPECTRE_V2=y
-CONFIG_MITIGATION_SRBDS=y
-CONFIG_MITIGATION_SSB=y
-CONFIG_MITIGATION_ITS=y
-CONFIG_MITIGATION_TSA=y
+# CONFIG_MITIGATION_SRBDS is not set
+# CONFIG_MITIGATION_SSB is not set
+# CONFIG_MITIGATION_ITS is not set
+# CONFIG_MITIGATION_TSA is not set
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
@@ -728,6 +724,8 @@ CONFIG_X86_DISABLED_FEATURE_CYRIX_ARR=y
 CONFIG_X86_DISABLED_FEATURE_CENTAUR_MCR=y
 CONFIG_X86_DISABLED_FEATURE_PKU=y
 CONFIG_X86_DISABLED_FEATURE_OSPKE=y
+CONFIG_X86_DISABLED_FEATURE_UNRET=y
+CONFIG_X86_DISABLED_FEATURE_CALL_DEPTH=y
 CONFIG_X86_DISABLED_FEATURE_LAM=y
 CONFIG_X86_DISABLED_FEATURE_SGX=y
 CONFIG_X86_DISABLED_FEATURE_XENPV=y
@@ -1002,7 +1000,7 @@ CONFIG_BLK_MQ_STACKING=y
 # IO Schedulers
 #
 CONFIG_MQ_IOSCHED_DEADLINE=y
-# CONFIG_MQ_IOSCHED_KYBER is not set
+CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_BFQ_GROUP_IOSCHED is not set
 # end of IO Schedulers
