--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.16.8 Kernel Configuration
+# Linux/x86 6.17.1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
@@ -108,6 +108,7 @@ CONFIG_CONTEXT_TRACKING_USER=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_CLOCKSOURCE_WATCHDOG_MAX_SKEW_US=100
+# CONFIG_POSIX_AUX_CLOCKS is not set
 # end of Timers subsystem
 
 CONFIG_BPF=y
@@ -220,6 +221,7 @@ CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_GROUP_SCHED_WEIGHT=y
+CONFIG_GROUP_SCHED_BANDWIDTH=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 # CONFIG_RT_GROUP_SCHED is not set
@@ -277,6 +279,7 @@ CONFIG_ELF_CORE=y
 CONFIG_PCSPKR_PLATFORM=y
 CONFIG_FUTEX=y
 CONFIG_FUTEX_PI=y
+CONFIG_FUTEX_PRIVATE_HASH=y
 CONFIG_EPOLL=y
 CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
@@ -696,6 +699,7 @@ CONFIG_KVM_X86=m
 CONFIG_KVM=m
 CONFIG_KVM_INTEL=m
 # CONFIG_KVM_AMD is not set
+CONFIG_KVM_IOAPIC=y
 # CONFIG_KVM_SMM is not set
 # CONFIG_KVM_HYPERV is not set
 # CONFIG_KVM_XEN is not set
@@ -746,6 +750,8 @@ CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
 CONFIG_HOTPLUG_CORE_SYNC_FULL=y
 CONFIG_HOTPLUG_SPLIT_STARTUP=y
 CONFIG_HOTPLUG_PARALLEL=y
+CONFIG_GENERIC_IRQ_ENTRY=y
+CONFIG_GENERIC_SYSCALL=y
 CONFIG_GENERIC_ENTRY=y
 # CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
@@ -807,7 +813,7 @@ CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
 # CONFIG_SECCOMP_CACHE_DEBUG is not set
-CONFIG_HAVE_ARCH_STACKLEAK=y
+CONFIG_HAVE_ARCH_KSTACK_ERASE=y
 CONFIG_HAVE_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR_STRONG=y
@@ -904,6 +910,7 @@ CONFIG_FUNCTION_ALIGNMENT_16B=y
 CONFIG_FUNCTION_ALIGNMENT=16
 CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
 CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
+CONFIG_ARCH_HAS_CPU_ATTACK_VECTORS=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -1118,14 +1125,13 @@ CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=7
-CONFIG_PAGE_BLOCK_ORDER=10
+CONFIG_PAGE_BLOCK_MAX_ORDER=10
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_DEFERRED_STRUCT_PAGE_INIT is not set
 CONFIG_PAGE_IDLE_FLAG=y
 CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_ARCH_HAS_CURRENT_STACK_POINTER=y
-CONFIG_ARCH_HAS_PTE_DEVMAP=y
 CONFIG_ZONE_DMA=y
 CONFIG_ZONE_DMA32=y
 CONFIG_HMM_MIRROR=y
@@ -1280,6 +1286,7 @@ CONFIG_NF_TABLES=m
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
 # CONFIG_NFT_NUMGEN is not set
+# CONFIG_NFT_EXTHDR_DCCP is not set
 # CONFIG_NFT_LOG is not set
 # CONFIG_NFT_LIMIT is not set
 # CONFIG_NFT_TUNNEL is not set
@@ -1295,6 +1302,7 @@ CONFIG_NF_TABLES_NETDEV=y
 # CONFIG_NFT_FWD_NETDEV is not set
 CONFIG_NETFILTER_XTABLES=m
 CONFIG_NETFILTER_XTABLES_COMPAT=y
+# CONFIG_NETFILTER_XTABLES_LEGACY is not set
 
 #
 # Xtables combined modules
@@ -1364,7 +1372,6 @@ CONFIG_NETFILTER_XTABLES_COMPAT=y
 #
 # IP: Netfilter Configuration
 #
-CONFIG_IP_NF_IPTABLES_LEGACY=m
 # CONFIG_NF_SOCKET_IPV4 is not set
 # CONFIG_NF_TPROXY_IPV4 is not set
 CONFIG_NF_TABLES_IPV4=y
@@ -1376,14 +1383,11 @@ CONFIG_NF_TABLES_ARP=y
 # CONFIG_NF_LOG_IPV4 is not set
 # CONFIG_NF_REJECT_IPV4 is not set
 # CONFIG_IP_NF_IPTABLES is not set
-# CONFIG_IP_NF_ARPTABLES is not set
-# CONFIG_IP_NF_ARPFILTER is not set
 # end of IP: Netfilter Configuration
 
 #
 # IPv6: Netfilter Configuration
 #
-# CONFIG_IP6_NF_IPTABLES_LEGACY is not set
 # CONFIG_NF_SOCKET_IPV6 is not set
 # CONFIG_NF_TPROXY_IPV6 is not set
 CONFIG_NF_TABLES_IPV6=y
@@ -1443,6 +1447,7 @@ CONFIG_NET_SCH_FQ_CODEL=y
 # CONFIG_NET_SCH_INGRESS is not set
 # CONFIG_NET_SCH_PLUG is not set
 # CONFIG_NET_SCH_ETS is not set
+# CONFIG_NET_SCH_DUALPI2 is not set
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 # CONFIG_DEFAULT_PFIFO_FAST is not set
@@ -1742,6 +1747,8 @@ CONFIG_EFI_RCI2_TABLE=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_EFI_COCO_SECRET=y
+# CONFIG_OVMF_DEBUG_LOG is not set
+CONFIG_EFI_SBAT_FILE=""
 # end of EFI (Extensible Firmware Interface) Support
 
 CONFIG_UEFI_CPER=y
@@ -1799,7 +1806,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
 # CONFIG_BLK_DEV_RAM is not set
-# CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
 # CONFIG_BLK_DEV_RBD is not set
 # CONFIG_BLK_DEV_UBLK is not set
@@ -2269,7 +2275,6 @@ CONFIG_INPUT_EVDEV=y
 #
 CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_ADP5588 is not set
-# CONFIG_KEYBOARD_ADP5589 is not set
 # CONFIG_KEYBOARD_APPLESPI is not set
 # CONFIG_KEYBOARD_ATKBD is not set
 # CONFIG_KEYBOARD_QT1050 is not set
@@ -2555,6 +2560,13 @@ CONFIG_PTP_1588_CLOCK_OPTIONAL=y
 #
 # end of PTP clock support
 
+#
+# DPLL device support
+#
+# CONFIG_ZL3073X_I2C is not set
+# CONFIG_ZL3073X_SPI is not set
+# end of DPLL device support
+
 CONFIG_PINCTRL=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_AMDISP is not set
@@ -2592,6 +2604,7 @@ CONFIG_PINCTRL=y
 #
 # end of Renesas pinctrl drivers
 
+CONFIG_GPIOLIB_LEGACY=y
 # CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_RESET=y
@@ -2951,6 +2964,8 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_BD9571MWV is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_CGBC is not set
+# CONFIG_MFD_CS40L50_I2C is not set
+# CONFIG_MFD_CS40L50_SPI is not set
 # CONFIG_MFD_CS42L43_I2C is not set
 # CONFIG_MFD_MADERA is not set
 # CONFIG_PMIC_DA903X is not set
@@ -3031,8 +3046,6 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MFD_ATC260X_I2C is not set
-# CONFIG_MFD_CS40L50_I2C is not set
-# CONFIG_MFD_CS40L50_SPI is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
 # CONFIG_MFD_QNAP_MCU is not set
@@ -3155,6 +3168,7 @@ CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DISPLAY_DP_HELPER=y
 CONFIG_DRM_DISPLAY_DSC_HELPER=y
 CONFIG_DRM_DISPLAY_HDCP_HELPER=y
+CONFIG_DRM_DISPLAY_HDMI_CEC_NOTIFIER_HELPER=y
 CONFIG_DRM_DISPLAY_HDMI_HELPER=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_EXEC=m
@@ -3300,7 +3314,6 @@ CONFIG_FB_EFI=y
 # CONFIG_FB_SM712 is not set
 CONFIG_FB_CORE=y
 CONFIG_FB_NOTIFY=y
-# CONFIG_FIRMWARE_EDID is not set
 CONFIG_FB_DEVICE=y
 CONFIG_FB_CFB_FILLRECT=y
 CONFIG_FB_CFB_COPYAREA=y
@@ -3343,6 +3356,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # end of Backlight & LCD device support
 
 CONFIG_HDMI=y
+# CONFIG_FIRMWARE_EDID is not set
 
 #
 # Console display driver support
@@ -3362,6 +3376,7 @@ CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
 CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_TRACE_GPU_MEM is not set
 # end of Graphics support
 
 # CONFIG_DRM_ACCEL is not set
@@ -3393,7 +3408,6 @@ CONFIG_SND_CTL_INPUT_VALIDATION=y
 CONFIG_SND_UTIMER=y
 CONFIG_SND_VMASTER=y
 CONFIG_SND_DMA_SGBUF=y
-CONFIG_SND_CTL_LED=m
 # CONFIG_SND_SEQUENCER is not set
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_PCSP is not set
@@ -3474,40 +3488,37 @@ CONFIG_SND_PCI=y
 # HD-Audio
 #
 CONFIG_SND_HDA=m
-CONFIG_SND_HDA_GENERIC_LEDS=y
-CONFIG_SND_HDA_INTEL=m
-# CONFIG_SND_HDA_ACPI is not set
 CONFIG_SND_HDA_HWDEP=y
 CONFIG_SND_HDA_RECONFIG=y
 CONFIG_SND_HDA_INPUT_BEEP=y
 CONFIG_SND_HDA_INPUT_BEEP_MODE=0
 CONFIG_SND_HDA_PATCH_LOADER=y
-CONFIG_SND_HDA_SCODEC_COMPONENT=m
-CONFIG_SND_HDA_CODEC_REALTEK=m
+CONFIG_SND_HDA_POWER_SAVE_DEFAULT=10
+# CONFIG_SND_HDA_CTL_DEV_ID is not set
+CONFIG_SND_HDA_PREALLOC_SIZE=0
+CONFIG_SND_HDA_INTEL=m
+# CONFIG_SND_HDA_ACPI is not set
 # CONFIG_SND_HDA_CODEC_ANALOG is not set
 # CONFIG_SND_HDA_CODEC_SIGMATEL is not set
 # CONFIG_SND_HDA_CODEC_VIA is not set
-# CONFIG_SND_HDA_CODEC_HDMI is not set
-# CONFIG_SND_HDA_CODEC_CIRRUS is not set
-# CONFIG_SND_HDA_CODEC_CS8409 is not set
 # CONFIG_SND_HDA_CODEC_CONEXANT is not set
 # CONFIG_SND_HDA_CODEC_SENARYTECH is not set
 # CONFIG_SND_HDA_CODEC_CA0110 is not set
 # CONFIG_SND_HDA_CODEC_CA0132 is not set
 # CONFIG_SND_HDA_CODEC_CMEDIA is not set
+# CONFIG_SND_HDA_CODEC_CM9825 is not set
 # CONFIG_SND_HDA_CODEC_SI3054 is not set
 CONFIG_SND_HDA_GENERIC=m
-CONFIG_SND_HDA_POWER_SAVE_DEFAULT=10
-CONFIG_SND_HDA_INTEL_HDMI_SILENT_STREAM=y
-# CONFIG_SND_HDA_CTL_DEV_ID is not set
-# end of HD-Audio
-
+# CONFIG_SND_HDA_CODEC_REALTEK is not set
+# CONFIG_SND_HDA_CODEC_CIRRUS is not set
+# CONFIG_SND_HDA_CODEC_HDMI is not set
 CONFIG_SND_HDA_CORE=m
 CONFIG_SND_HDA_COMPONENT=y
-CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_INTEL_NHLT=y
 CONFIG_SND_INTEL_DSP_CONFIG=m
 CONFIG_SND_INTEL_SOUNDWIRE_ACPI=m
+# end of HD-Audio
+
 # CONFIG_SND_SPI is not set
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=m
@@ -3963,7 +3974,6 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 # CONFIG_RTC_DRV_ISL12022 is not set
 # CONFIG_RTC_DRV_X1205 is not set
 # CONFIG_RTC_DRV_PCF8523 is not set
-# CONFIG_RTC_DRV_PCF85063 is not set
 # CONFIG_RTC_DRV_PCF85363 is not set
 # CONFIG_RTC_DRV_PCF8563 is not set
 # CONFIG_RTC_DRV_PCF8583 is not set
@@ -4006,6 +4016,7 @@ CONFIG_RTC_I2C_AND_SPI=y
 #
 # CONFIG_RTC_DRV_DS3232 is not set
 # CONFIG_RTC_DRV_PCF2127 is not set
+# CONFIG_RTC_DRV_PCF85063 is not set
 # CONFIG_RTC_DRV_RV3029C2 is not set
 # CONFIG_RTC_DRV_RX6110 is not set
 
@@ -4049,7 +4060,7 @@ CONFIG_UDMABUF=y
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_SYSFS_STATS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
-CONFIG_DMABUF_HEAPS_CMA=y
+# CONFIG_DMABUF_HEAPS_CMA is not set
 # end of DMABUF options
 
 # CONFIG_UIO is not set
@@ -4087,12 +4098,12 @@ CONFIG_CHROMEOS_PRIVACY_SCREEN=m
 # CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_X86_PLATFORM_DEVICES=y
 CONFIG_ACPI_WMI=m
+# CONFIG_ACPI_WMI_LEGACY_DEVICE_NAMES is not set
 # CONFIG_WMI_BMOF is not set
 # CONFIG_MXM_WMI is not set
 # CONFIG_NVIDIA_WMI_EC_BACKLIGHT is not set
 # CONFIG_XIAOMI_WMI is not set
 # CONFIG_GIGABYTE_WMI is not set
-# CONFIG_YOGABOOK is not set
 # CONFIG_ACERHDF is not set
 # CONFIG_ACER_WIRELESS is not set
 
@@ -4104,6 +4115,7 @@ CONFIG_ACPI_WMI=m
 # end of AMD HSMP Driver
 
 # CONFIG_AMD_PMC is not set
+# CONFIG_AMD_HFI is not set
 # CONFIG_AMD_3D_VCACHE is not set
 # CONFIG_AMD_WBRF is not set
 # CONFIG_AMD_ISP_PLATFORM is not set
@@ -4117,9 +4129,7 @@ CONFIG_ACPI_WMI=m
 # CONFIG_X86_PLATFORM_DRIVERS_HP is not set
 # CONFIG_WIRELESS_HOTKEY is not set
 # CONFIG_IBM_RTL is not set
-# CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
 # CONFIG_SENSORS_HDAPS is not set
-# CONFIG_THINKPAD_LMI is not set
 # CONFIG_INTEL_ATOMISP2_PM is not set
 # CONFIG_INTEL_IFS is not set
 # CONFIG_INTEL_SAR_INT1092 is not set
@@ -4146,10 +4156,15 @@ CONFIG_ACPI_WMI=m
 # CONFIG_INTEL_SMARTCONNECT is not set
 # CONFIG_INTEL_TURBO_MAX_3 is not set
 # CONFIG_INTEL_VSEC is not set
+# CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
+# CONFIG_LENOVO_WMI_CAMERA is not set
+# CONFIG_THINKPAD_LMI is not set
+# CONFIG_YOGABOOK is not set
+# CONFIG_LENOVO_WMI_GAMEZONE is not set
+# CONFIG_LENOVO_WMI_TUNING is not set
 # CONFIG_ACPI_QUICKSTART is not set
 # CONFIG_MSI_WMI is not set
 # CONFIG_MSI_WMI_PLATFORM is not set
-# CONFIG_SAMSUNG_LAPTOP is not set
 # CONFIG_SAMSUNG_Q10 is not set
 # CONFIG_TOSHIBA_BT_RFKILL is not set
 # CONFIG_TOSHIBA_HAPS is not set
@@ -4159,7 +4174,6 @@ CONFIG_ACPI_WMI=m
 # CONFIG_TOPSTAR_LAPTOP is not set
 # CONFIG_SERIAL_MULTI_INSTANTIATE is not set
 # CONFIG_INSPUR_PLATFORM_PROFILE is not set
-# CONFIG_LENOVO_WMI_CAMERA is not set
 # CONFIG_DASHARO_ACPI is not set
 # CONFIG_INTEL_IPS is not set
 # CONFIG_INTEL_SCU_PCI is not set
@@ -4336,6 +4350,7 @@ CONFIG_PWM=y
 #
 # IRQ chip support
 #
+CONFIG_IRQ_MSI_LIB=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
@@ -4513,6 +4528,7 @@ CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
 CONFIG_TMPFS_INODE64=y
 CONFIG_TMPFS_QUOTA=y
+CONFIG_ARCH_SUPPORTS_HUGETLBFS=y
 # CONFIG_HUGETLBFS is not set
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 CONFIG_CONFIGFS_FS=y
@@ -4680,10 +4696,11 @@ CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 # CONFIG_INIT_STACK_NONE is not set
 # CONFIG_INIT_STACK_ALL_PATTERN is not set
 CONFIG_INIT_STACK_ALL_ZERO=y
+CONFIG_KSTACK_ERASE=y
 CONFIG_GCC_PLUGIN_STACKLEAK=y
-CONFIG_STACKLEAK_TRACK_MIN_SIZE=100
-# CONFIG_STACKLEAK_METRICS is not set
-# CONFIG_STACKLEAK_RUNTIME_DISABLE is not set
+CONFIG_KSTACK_ERASE_TRACK_MIN_SIZE=100
+# CONFIG_KSTACK_ERASE_METRICS is not set
+# CONFIG_KSTACK_ERASE_RUNTIME_DISABLE is not set
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_INIT_ON_FREE_DEFAULT_ON=y
 CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
@@ -4877,8 +4894,6 @@ CONFIG_CRYPTO_USER_API_AEAD=y
 # CONFIG_CRYPTO_USER_API_ENABLE_OBSOLETE is not set
 # end of Userspace interface
 
-CONFIG_CRYPTO_HASH_INFO=y
-
 #
 # Accelerated Cryptographic Algorithms for CPU (x86)
 #
@@ -4906,8 +4921,6 @@ CONFIG_CRYPTO_AES_NI_INTEL=m
 # CONFIG_CRYPTO_NHPOLY1305_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_AVX2 is not set
 CONFIG_CRYPTO_POLYVAL_CLMUL_NI=m
-CONFIG_CRYPTO_SHA1_SSSE3=m
-CONFIG_CRYPTO_SHA512_SSSE3=m
 # CONFIG_CRYPTO_SM3_AVX_X86_64 is not set
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
 # end of Accelerated Cryptographic Algorithms for CPU (x86)
@@ -4959,10 +4972,21 @@ CONFIG_GENERIC_IOMAP=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_ARCH_USE_SYM_ANNOTATIONS=y
+CONFIG_CRC16=y
+CONFIG_CRC_CCITT=y
+CONFIG_CRC_ITU_T=m
+CONFIG_CRC_T10DIF=y
+CONFIG_CRC_T10DIF_ARCH=y
+CONFIG_CRC32=y
+CONFIG_CRC32_ARCH=y
+CONFIG_CRC64=y
+CONFIG_CRC64_ARCH=y
+CONFIG_CRC_OPTIMIZATIONS=y
 
 #
 # Crypto library routines
 #
+CONFIG_CRYPTO_HASH_INFO=y
 CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_ARC4=m
@@ -4973,27 +4997,14 @@ CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
 CONFIG_CRYPTO_LIB_CURVE25519_INTERNAL=y
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=11
 CONFIG_CRYPTO_LIB_SHA1=y
+CONFIG_CRYPTO_LIB_SHA1_ARCH=y
 CONFIG_CRYPTO_LIB_SHA256=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256_SIMD=y
-CONFIG_CRYPTO_LIB_SHA256_GENERIC=y
+CONFIG_CRYPTO_LIB_SHA256_ARCH=y
+CONFIG_CRYPTO_LIB_SHA512=y
+CONFIG_CRYPTO_LIB_SHA512_ARCH=y
 # CONFIG_CRYPTO_BLAKE2S_X86 is not set
-CONFIG_CRYPTO_SHA256_X86_64=y
 # end of Crypto library routines
 
-CONFIG_CRC_CCITT=y
-CONFIG_CRC16=y
-CONFIG_CRC_T10DIF=y
-CONFIG_ARCH_HAS_CRC_T10DIF=y
-CONFIG_CRC_T10DIF_ARCH=y
-CONFIG_CRC_ITU_T=m
-CONFIG_CRC32=y
-CONFIG_ARCH_HAS_CRC32=y
-CONFIG_CRC32_ARCH=y
-CONFIG_CRC64=y
-CONFIG_ARCH_HAS_CRC64=y
-CONFIG_CRC64_ARCH=y
-CONFIG_CRC_OPTIMIZATIONS=y
 CONFIG_XXHASH=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_842_COMPRESS=y
@@ -5249,7 +5260,6 @@ CONFIG_HAVE_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_FTRACE_REGS_HAVING_PT_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_NO_PATCHABLE=y
-CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_FENTRY=y
 CONFIG_HAVE_OBJTOOL_MCOUNT=y
